[package]
name = "gnutella"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
once_cell = "1.18.0"
lazy_static = "1.4.0"
uuid = { version = "1.3", features = ["v4"] }
prettytable= "0.10.0"
tiny_http = "0.12"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1.0", features = ["full"] }
local-ip-address = "0.5.1"

[build-dependencies]
prost-build = "0.13.3"
